--- a/website/content/en/releases/13.5R/readme.adoc
+++ b/website/content/en/releases/13.5R/readme.adoc
@@ -1,11 +1,11 @@
 ---
-title: "FreeBSD X.0-RELEASE README"
+title: "FreeBSD 13.5-RELEASE README"
 sidenav: download
 ---
 
-:releaseCurrent: X.0-RELEASE
+:releaseCurrent: 13.5-RELEASE
 :releaseType: release
-:releaseBranch: X-STABLE
+:releaseBranch: 13-STABLE
 :releasePrevStable: X.Y-RELEASE
 :releasePrev: X.Y-RELEASE
 
