--- a/website/content/en/releases/13.5R/schedule.adoc
+++ b/website/content/en/releases/13.5R/schedule.adoc
@@ -1,13 +1,13 @@
 ---
-title: "FreeBSD X.0 Release Process"
+title: "FreeBSD 13.5 Release Process"
 sidenav: download
 ---
 
 = FreeBSD {localRel} Release Process
-:localRel: X.0
+:localRel: 13.5
 :localBranchHead: head
-:localBranchStable: stable/X
-:localBranchReleng: releng/X.0
+:localBranchStable: stable/13
+:localBranchReleng: releng/13.5
 
 include::shared/en/urls.adoc[]
 
