--- a/website/content/en/releases/13.5R/_index.adoc
+++ b/website/content/en/releases/13.5R/_index.adoc
@@ -1,11 +1,11 @@
 ---
-title: "FreeBSD X.0 Release Information"
+title: "FreeBSD 13.5 Release Information"
 sidenav: download
 ---
 
-:localRel: X.0
-:localBranchStable: stable/X
-:localBranchReleng: releng/X.0
+:localRel: 13.5
+:localBranchStable: stable/13
+:localBranchReleng: releng/13.5
 
 = FreeBSD {localRel} Release Information
 
