--- a/website/content/en/releases/13.5R/errata.adoc
+++ b/website/content/en/releases/13.5R/errata.adoc
@@ -1,11 +1,10 @@
 ---
-title: "FreeBSD X.0-RELEASE Errata"
+title: "FreeBSD 13.5-RELEASE Errata"
 sidenav: download
 ---
 
-:release: X.0-RELEASE
-:releaseNext: X.1-RELEASE
-:releaseBranch: X-STABLE
+:release: 13.5-RELEASE
+:releaseBranch: 13-STABLE
 
 = FreeBSD {release} Errata
 
@@ -14,8 +13,6 @@ sidenav: download
 This document lists errata items for FreeBSD {release}, containing significant information discovered after the release or too late in the release cycle to be otherwise included in the release documentation.
 This information includes security advisories, as well as news relating to the software or documentation that could affect its operation or usability.
 An up-to-date version of this document should always be consulted before installing this version of FreeBSD.
-
-This errata document for FreeBSD {release} will be maintained until the release of FreeBSD {releaseNext}.
 
 == Table of Contents
 
