--- a/website/content/en/releases/13.5R/installation.adoc
+++ b/website/content/en/releases/13.5R/installation.adoc
@@ -1,10 +1,10 @@
 ---
-title: "FreeBSD X.0-RELEASE Installation Instructions"
+title: "FreeBSD 13.5-RELEASE Installation Instructions"
 sidenav: download
 ---
 
-:releaseCurrent: X.0-RELEASE
-:localRel: X.0
+:releaseCurrent: 13.5-RELEASE
+:localRel: 13.5
 
 include::shared/en/urls.adoc[]
 
