--- a/website/content/en/releases/13.5R/schedule.adoc
+++ b/website/content/en/releases/13.5R/schedule.adoc
@@ -4,10 +4,12 @@ sidenav: download
 ---
 
 = FreeBSD {localRel} Release Process
+:localRelPrev: 13.4
 :localRel: 13.5
 :localBranchHead: head
 :localBranchStable: stable/13
 :localBranchReleng: releng/13.5
+:localMailingList: stable
 
 include::shared/en/urls.adoc[]
 
@@ -16,7 +18,7 @@ include::shared/en/urls.adoc[]
 This is the release schedule for FreeBSD {localRel}.
 For more information about the release engineering process, please see the link:../../../releng/[Release Engineering] section of the web site.
 
-General discussions about the pending release and known issues should be sent to the public mailto:FreeBSD-current@FreeBSD.org[freebsd-current] mailing list.
+General discussions about the pending release and known issues should be sent to the public mailto:FreeBSD-{localMailingList}@FreeBSD.org[freebsd-{localMailingList}] mailing list.
 
 // link:{handbook}glossary/#mfc-glossary[MFC] requests should be sent to link:mailto:re@FreeBSD.org[re@FreeBSD.org] following the link:https://wiki.freebsd.org/Releng/ChangeRequestGuidelines[Change Request Guidelines].
 
@@ -26,16 +28,23 @@ General discussions about the pending release and known issues should be sent to
 
 == Schedule
 
-During the {localBranchHead} freeze, the Release Engineering Team may create ALPHA snapshots to publish for testing purposes.
-As the frequency and total number of the ALPHA snapshots will depend on the length of time the {localBranchHead} branch is frozen, no official schedule is provided.
-
-Announcements regarding the availability of the ALPHA snapshots will be sent to the mailto:freebsd-current@FreeBSD.org[freebsd-current] and mailto:freebsd-snapshots@FreeBSD.org[freebsd-snapshots] mailing lists.
-
 [.tblbasic]
 [cols=",,,",options="header",]
 |===
 |Action |Expected |Actual |Description
-
+|Initial release schedule announcement |- |7 October 2024 |Release Engineers send announcement email to developers with a rough schedule.
+|Release schedule reminder |13 January 2025 |- |Release Engineers send reminder announcement e-mail to developers with updated schedule.
+|Code slush begins |24 January 2025 |- |Release Engineers announce that all further commits to the {localBranchStable} branch will not require explicit approval, however new features should be avoided.
+|{localBranchReleng} branch |7 February 2025 |- |{localBranchReleng} branch created; future release engineering proceeds on this branch.
+|BETA1 builds begin |7 February 2025 |- |First beta test snapshot.
+|BETA2 builds begin |14 February 2025 |- |Second beta test snapshot.
+|BETA3 builds begin |21 February 2025 |- |Third beta test snapshot.
+|RC1 builds begin |28 February 2025 |- |First release candidate.
+|RELEASE builds begin |7 March 2025 |- |{localRel}-RELEASE builds begin.
+|RELEASE announcement |11 March 2025 |- |{localRel}-RELEASE press release.
+|{localRelPrev} EoL |30 June 2025 |- |{localRelPrev}-RELEASE no longer supported.
+|{localRel} EoL |30 April 2026 |- |{localRel}-RELEASE no longer supported.
+|{localBranchStable} EoL |30 April 2026 |- |{localBranchStable} no longer supported.
 |===
 
 "*" indicates "as-needed" items.
