--- a/shared/releases.adoc
+++ b/shared/releases.adoc
@@ -37,13 +37,13 @@
 
 // Set to 'INCLUDE' when the schedule is available.
 
-:beta-upcoming: IGNORE
+:beta-upcoming: INCLUDE
 
 // Set to 'INCLUDE' when the installation images are available.
 
 :beta-testing: IGNORE
-:betarel-current-major: 13
-:betarel-current: 13.4
+:betarel-current-major: 14
+:betarel-current: 14.2
 :betarel-vers: RELEASE
 :u-betarel-schedule: https://www.FreeBSD.org/releases/{betarel-current}R/schedule/
 
@@ -57,7 +57,7 @@
 // Set to 'INCLUDE' when the installation images are available.
 
 :beta2-testing: IGNORE
-:betarel2-current: 14.2
+:betarel2-current: 13.5
 :betarel2-vers: RELEASE
 :u-betarel2-schedule: https://www.FreeBSD.org/releases/{betarel2-current}R/schedule/
 
