--- a/website/content/en/releng/_index.adoc
+++ b/website/content/en/releng/_index.adoc
@@ -33,7 +33,7 @@ General information about committing to -STABLE.
 |===
 |Date |Event |Information
 |December 2024 |FreeBSD 14.2 |link:../releases/14.2R/schedule/[Target Schedule]
-|March 2025 |FreeBSD 13.5 |
+|March 2025 |FreeBSD 13.5 |link:../releases/13.5R/schedule/[Target Schedule]
 |June 2025 |FreeBSD 14.3 |
 |December 2025 |FreeBSD 15.0 |
 |March 2026 |FreeBSD 14.4 |
