--- a/website/archetypes/release/schedule.adoc
+++ b/website/archetypes/release/schedule.adoc
@@ -4,6 +4,7 @@ sidenav: download
 ---
 
 = FreeBSD {localRel} Release Process
+:localRelPrev: X.Y-1
 :localRel: X.0
 :localBranchHead: head
 :localBranchStable: stable/X
@@ -36,7 +37,19 @@ Announcements regarding the availability of the ALPHA snapshots will be sent to 
 [cols=",,,",options="header",]
 |===
 |Action |Expected |Actual |Description
-
+|Initial release schedule announcement |- |XXX |Release Engineers send announcement email to developers with a rough schedule.
+|Release schedule reminder |XXX |- |Release Engineers send reminder announcement e-mail to developers with updated schedule.
+|Code slush begins |XXX |- |Release Engineers announce that all further commits to the {localBranchStable} branch will not require explicit approval, however new features should be avoided.
+|{localBranchReleng} branch |XXX |- |{localBranchReleng} branch created; future release engineering proceeds on this branch.
+|BETA1 builds begin |XXX |- |First beta test snapshot.
+|BETA2 builds begin |XXX |- |Second beta test snapshot.
+|BETA3 builds begin |XXX |- |Third beta test snapshot.
+|RC1 builds begin |XXX |- |First release candidate.
+|RELEASE builds begin |XXX |- |{localRel}-RELEASE builds begin.
+|RELEASE announcement |XXX |- |{localRel}-RELEASE press release.
+|{localRelPrev} EoL |XXX |- |{localRelPrev}-RELEASE no longer supported.
+|{localRel} EoL |XXX |- |{localRel}-RELEASE no longer supported.
+|{localBranchStable} EoL |XXX |- |{localBranchStable} no longer supported.
 |===
 
 "*" indicates "as-needed" items.
