docs(handbook/dtrace): Update DTrace guide link
Update the link to the official DTrace guide maintained by the illumos
project. `http://dtrace.org/guide` is not available right now. The new link
points to `https://illumos.org/books/dtrace/bookinfo.html`.

--- a/documentation/content/de/books/handbook/dtrace/_index.adoc
+++ b/documentation/content/de/books/handbook/dtrace/_index.adoc
@@ -55,7 +55,7 @@ DTrace ist ein bemerkenswertes Werkzeug zur Profilerstellung, mit einer beeindru
 
 Die DTrace-Implementierung in FreeBSD bietet experimentelle Unterstützung für DTrace im Userland. Userland DTrace erlaubt es Anwendern, function boundary tracing für Anwendungsprogramme über den `pid`-Provider hinweg vorzunehmen und um statische Sonden in Anwendungsprogramme für die spätere Aufzeichnung einzufügen. Manche Ports, wie beispielsweise package:databases/postgresql12-server[] und package:lang/php74[] besitzen eine DTrace-Option, um statische Sonden zu aktivieren.
 
-Eine offizielle Anleitung für DTrace wird vom Illumos Projekt im http://dtrace.org/guide[DTrace Guide] bereitgestellt.
+Eine offizielle Anleitung für DTrace wird vom Illumos Projekt im https://illumos.org/books/dtrace/bookinfo.html[DTrace Guide] bereitgestellt.
 
 Nachdem Sie dieses Kapitel gelesen haben, werden Sie Folgendes wissen:
 
