--- a/documentation/content/en/books/handbook/dtrace/_index.po
+++ b/documentation/content/en/books/handbook/dtrace/_index.po
@@ -80,8 +80,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/dtrace/_index.adoc:66
 msgid ""
-"The official guide to DTrace is maintained by the Illumos project at http://"
-"dtrace.org/guide[DTrace Guide]."
+"The official guide to DTrace is maintained by the Illumos project at "
+"https://illumos.org/books/dtrace/bookinfo.html[DTrace Guide]."
 msgstr ""
 
 #. type: Plain text
