--- a/documentation/content/pl/books/handbook/dtrace/_index.adoc
+++ b/documentation/content/pl/books/handbook/dtrace/_index.adoc
@@ -55,7 +55,7 @@ DTrace is a remarkable profiling tool, with an impressive array of features for 
 
 The FreeBSD implementation provides full support for kernel DTrace and experimental support for userland DTrace. Userland DTrace allows users to perform function boundary tracing for userland programs using the `pid` provider, and to insert static probes into userland programs for later tracing. Some ports, such as package:databases/postgresql12-server[] and package:lang/php74[] have a DTrace option to enable static probes.
 
-The official guide to DTrace is maintained by the Illumos project at http://dtrace.org/guide[DTrace Guide].
+The official guide to DTrace is maintained by the Illumos project at https://illumos.org/books/dtrace/bookinfo.html[DTrace Guide].
 
 After reading this chapter, you will know:
 
