--- a/documentation/content/en/books/handbook/dtrace/_index.adoc
+++ b/documentation/content/en/books/handbook/dtrace/_index.adoc
@@ -62,7 +62,7 @@ The FreeBSD implementation provides full support for kernel DTrace and experimen
 Userland DTrace allows users to perform function boundary tracing for userland programs using the `pid` provider, and to insert static probes into userland programs for later tracing.
 Some ports, such as package:databases/postgresql12-server[] and package:lang/php74[] have a DTrace option to enable static probes.
 
-The official guide to DTrace is maintained by the Illumos project at http://dtrace.org/guide[DTrace Guide].
+The official guide to DTrace is maintained by the Illumos project at https://illumos.org/books/dtrace/bookinfo.html[DTrace Guide].
 
 After reading this chapter, you will know:
 
