[documentation][virtualization]: fix Xen host requirements
Booting with BIOS is only a requirement for FreeBSD < 14.  While there also
adjust the paragraph above to mention both Intel EPT and AMD NPT.

Sponsored by: Cloud Software Group
Reviewed by: bcr
Differential revision: https://reviews.freebsd.org/D47113

--- a/documentation/content/en/books/handbook/virtualization/_index.adoc
+++ b/documentation/content/en/books/handbook/virtualization/_index.adoc
@@ -2274,11 +2274,12 @@ Note that not all features are supported on FreeBSD yet.
 === Hardware Requirements for Xen(TM) Dom0
 
 To run the Xen(TM) hypervisor on a host, certain hardware functionality is required.
-Hardware virtualized domains require Extended Page Table (https://en.wikipedia.org/wiki/Extended_Page_Table[EPT]) and Input/Output Memory Management Unit (https://en.wikipedia.org/wiki/List_of_IOMMU-supporting_hardware[IOMMU]) support in the host processor.
+Running FreeBSD as a Xen host (Dom0) require Intel Extended Page Tables (https://en.wikipedia.org/wiki/Extended_Page_Table[EPT]) or AMD Nested Page Tables (https://en.wikipedia.org/wiki/Rapid_Virtualization_Indexing[NPT]) and Input/Output Memory Management Unit (https://en.wikipedia.org/wiki/List_of_IOMMU-supporting_hardware[IOMMU]) support in the host processor.
 
 [NOTE]
 ====
-In order to run a FreeBSD Xen(TM) Dom0 the box must be booted using legacy boot (BIOS).
+In order to run a FreeBSD 13 Xen(TM) Dom0 the box must be booted using legacy boot (BIOS).
+FreeBSD 14 and newer supports booting as a Xen(TM) Dom0 in both BIOS and UEFI modes.
 ====
 
 [[virtualization-host-xen-dom0-setup]]
