Status/2024Q3/code-audit.adoc: Minor fix

--- a/website/content/en/status/report-2024-07-2024-09/code-audit.adoc
+++ b/website/content/en/status/report-2024-07-2024-09/code-audit.adoc
@@ -3,7 +3,7 @@
 Contact: Ed Maste <emaste@FreeBSD.org>
 Contact: Pierre Pronchery <pierre@freebsdfoundation.org>
 
-With the support of the link:https://alpha-omega.dev/[Alpha-Omega project], the FreeBSD Foundation undertook code audits of two important subsystems - the bhyve hypervisor, and the Capsicum sandboxing framework.
+With the support of the link:https://alpha-omega.dev/[Alpha-Omega project], the FreeBSD Foundation undertook code audits of two important subsystems -- the bhyve hypervisor, and the Capsicum sandboxing framework.
 In addition to uncovering vulnerabilities in these systems to correct, the audits look to identify classes of vulnerabilities and/or suboptimal coding practices that we can look to address across the project.
 
 The Foundation interviewed several firms, and selected Synacktiv to perform the audit.
