porters-handbook/uses: add possible arguments for cargo
Signed-off-by: rilysh <nightquick@proton.me>

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -267,7 +267,7 @@ Using `append` makes it possible to perform patching on the original file before
 [[uses-cargo]]
 == `cargo`
 
-Possible arguments: (none)
+Possible arguments: (none), `build`, `test`, `clean`
 
 Uses Cargo for configuring, building, and testing.
 It can be used to port Rust applications that use the Cargo build system.
