[phb][special/uses] Add two new TCL_ variables
Follow up for commit in ports:
https://cgit.freebsd.org/ports/commit/?id=f1b6b49a6ab2faa4ce6190ef75db08f433cab235

--- a/documentation/content/en/books/porters-handbook/special/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/special/_index.adoc
@@ -3688,6 +3688,12 @@ It is possible to specify the desired version of `tcl` by appending `:_xx_`, for
 |`TCL_INCLUDEDIR`
 | path of the Tcl C header files
 
+|`TCL_PKG_LIB_PREFIX`
+| Library prefix, as per TIP595
+
+|`TCL_PKG_STUB_POSTFIX`
+|Stub library postfix
+
 |`TK_VER`
 | chosen major.minor version of Tk
 
