--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -2100,6 +2100,8 @@ After including [.filename]#bsd.port.pre.mk# the port can inspect the results us
 * `TCLSH`: full path of the Tcl interpreter
 * `TCL_LIBDIR`: path of the Tcl libraries
 * `TCL_INCLUDEDIR`: path of the Tcl C header files
+* `TCL_PKG_LIB_PREFIX`: Library prefix, as per TIP595
+* `TCL_PKG_STUB_POSTFIX`: Stub library postfix
 * `TK_VER`: chosen major.minor version of Tk
 * `WISH`: full path of the Tk interpreter
 * `TK_LIBDIR`: path of the Tk libraries
