--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -558,7 +558,7 @@ Ethernet driver for Google Virtual NIC (gVNIC) (man:gve[4] driver)
 
 [i386, amd64] Intel Dual Band Wireless AC 3160/7260/7265 IEEE 802.11ac network adapters (man:iwm[4] driver)
 
-[i386, amd64] Intel Wireless WiFi Link 4965AGN IEEE 802.11n PCI network adapters (man:iwn[4] driver)
+&hwlist.iwn;
 
 [i386, amd64] Marvell Libertas IEEE 802.11b/g PCI network adapters (man:malo[4] driver)
 
