--- a/website/content/en/releases/14.2R/schedule.adoc
+++ b/website/content/en/releases/14.2R/schedule.adoc
@@ -33,8 +33,8 @@ General discussions about the pending release and known issues should be sent to
 |===
 |Action |Expected |Actual |Description
 |Initial release schedule announcement |- |29 July 2024|Release Engineers send announcement email to developers with a rough schedule.
-|Release schedule reminder |7 October 2024 |- |Release Engineers send reminder announcement e-mail to developers with updated schedule.
-|Code slush begins |18 October 2024 |- |Release Engineers announce that all further commits to the {localBranchStable} branch will not require explicit approval, however new features should be avoided.
+|Release schedule reminder |7 October 2024 |7 October 2024 |Release Engineers send reminder announcement e-mail to developers with updated schedule.
+|Code slush begins |18 October 2024 |18 October 2024 |Release Engineers announce that all further commits to the {localBranchStable} branch will not require explicit approval, however new features should be avoided.
 |{localBranchReleng} branch |1 November 2024 |- |{localBranchReleng} branch created; future release engineering proceeds on this branch.
 |BETA1 builds begin |1 November 2024 |- |First beta test snapshot.
 |BETA2 builds begin |8 November 2024 |- |Second beta test snapshot.
