fdp-primer: Fix a typo

--- a/documentation/content/en/books/fdp-primer/translations/_index.adoc
+++ b/documentation/content/en/books/fdp-primer/translations/_index.adoc
@@ -149,7 +149,7 @@ as defined in ISO639 ([.filename]#/usr/share/misc/iso639# on a version of FreeBS
 
 [WARNING]
 ====
-Hugo need the language codes in lowercase.
+Hugo needs the language codes in lowercase.
 For example, instead of `pt_BR` Hugo uses `pt-br`.
 ====
 
