Use man:mbuf[9] instead of mbuf(9).

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -457,7 +457,7 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |1400061
 |gitref:c4c5981c14d5bd69e9df9ae691069ec4c2e92174[repository="src",length=12]
 |June 8, 2022
-|14.0-CURRENT after mbuf(9) structure changes.
+|14.0-CURRENT after man:mbuf[9] structure changes.
 
 |1400062
 |gitref:8c309d48aabf1cb469334c7716033f177a2715c0[repository="src",length=12]
