Document __FreeBSD_version values 1500019 through 1500026.

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -155,6 +155,46 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |April 6, 2024
 |15.0-CURRENT after upgrading llvm, clang, compiler-rt, libc++, libunwind, lld, lldb and openmp to llvmorg-18.1.3-0-gc13b7485b879, a.k.a. 18.1.3 release.
 
+|1500019
+|gitref:e03e8b07743385e5b199409074fb60b1a9ed1fac[repository="src",length=12]
+|May 31, 2024
+|15.0-CURRENT after redefining `CLOCK_BOOTTIME` to alias `CLOCK_MONOTONIC` instead of `CLOCK_UPTIME`.
+
+|1500020
+|gitref:7818c2d37c2c600fc9ad6f2a0951e50dd21b17c8[repository="src",length=12]
+|July 12, 2024
+|15.0-CURRENT after removing support for building armv6.
+
+|1500021
+|gitref:24388fccd551f79f64e54099a7d78196535c0a29[repository="src",length=12]
+|July 21, 2024
+|15.0-CURRENT after LinuxKPI changes.
+
+|1500022
+|gitref:a1740cb93639648b41055958ad8c7f6083efdc96[repository="src",length=12]
+|July 29, 2024
+|15.0-CURRENT after removing kernel stack swapping support.
+
+|1500023
+|gitref:1206cf04a717a55bc15255ed043b066941cb43f2[repository="src",length=12]
+|July 30, 2024
+|15.0-CURRENT after adding new flags to man:malloc[9].
+
+|1500024
+|gitref:e3953c036f9d66c85b8e19f99f0710b3288ce5fb[repository="src",length=12]
+|October 2, 2024
+|15.0-CURRENT after bumping [.filename]#libmd.so.6# to [.filename]#libmd.so.7#.
+
+|1500025
+|gitref:9d52823bf1dfac237e58b5208299aaa5e2df42e9[repository="src",length=12]
+|October 6, 2024
+|15.0-CURRENT after widening the `flags` field in `vm_object`.
+
+|1500026
+|gitref:f3dbef108212460489ae68b4c47e20b73984f433[repository="src",length=12]
+|October 23, 2024
+|15.0-CURRENT after upgrading llvm, clang, compiler-rt, libc++, libunwind, lld, lldb and openmp to llvmorg-19.1.2-0-g7ba7d8e2f7b6, a.k.a. 19.1.2 release.
+
 |===
 
 [[versions-14]]
