Document __FreeBSD_version values 1401500 through 1401503.

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -679,6 +679,26 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |April 20, 2024
 |14.0-STABLE after upgrading llvm, clang, compiler-rt, libc++, libunwind, lld, lldb and openmp to llvmorg-18.1.3-0-gc13b7485b879, a.k.a. 18.1.3 release.
 
+|1401500
+|gitref:7b082bdf72e65f94b9b17d9fa1d0c1c202e4eb49[repository="src",length=12]
+|May 2, 2024
+|14.1-STABLE after it was renamed from 14.1-PRERELEASE.
+
+|1401501
+|gitref:f285eabc89ce8ccf3aaf563401df942e406c2b5f[repository="src",length=12]
+|June 6, 2024
+|14.1-STABLE after adding the linuxkpi_video module.
+
+|1401502
+|gitref:b37a6d41a046dbb46ee1d6bf00c710c03c944a24[repository="src",length=12]
+|August 2, 2024
+|14.1-STABLE after LinuxKPI changes.
+
+|1401503
+|gitref:8a5a9dbf389e86d278764ababf2f1eb8ee276680[repository="src",length=12]
+|October 15, 2024
+|14.1-STABLE after widening the `flags` field in `vm_object`.
+
 |===
 
 ////
