status: various typos fixes

--- a/website/content/en/status/report-2024-07-2024-09/freebsd-foundation.adoc
+++ b/website/content/en/status/report-2024-07-2024-09/freebsd-foundation.adoc
@@ -75,7 +75,7 @@ The Foundation, along with new funding and investment partners, is currently sup
 
 * The first, partially funded by link:https://alpha-omega.dev/[Alpha-Omega], is to improve FreeBSD security.
 As part of this effort, the Foundation enlisted link:https://www.synacktiv.com/en[Synacktiv] to run a code audit on two significant subsystems: bhyve and Capsicum.
-For details, refer to the dedicated <<_capsicum_and_bhyve_code_audit,Capscicum and Bhyve Code Audit>> report entry.
+For details, refer to the dedicated <<_capsicum_and_bhyve_code_audit,Capsicum and Bhyve Code Audit>> report entry.
 
 * The second project, jointly funded by AMD and the Foundation, is to develop an AMD IOMMU driver for FreeBSD.
 The impetus for the project was to better support large core AMD systems.
@@ -138,7 +138,7 @@ In other Foundation news:
 
 * Other members of the Foundation's technology team contributed to FreeBSD development efforts.  For example:
 ** Mitchell Horne committed work for RISC-V, including adding support for the Supervisor-mode: Page-Based Memory Types (Svpbmt) extension
-** Ed Maste removed the deprecated mergmaster tool in favor of man:etcupdate[8] for updating files not managed by install world
+** Ed Maste removed the deprecated mergemaster tool in favor of man:etcupdate[8] for updating files not managed by install world
 ** Joe Mingrone updated our base libpcap and man:tcpdump[1]
 ** Li-Wen Hsu kept our Jenkins port tracking the latest upstream versions with a number of port updates.
 
