--- a/website/content/en/status/report-2024-07-2024-09/portmgr.adoc
+++ b/website/content/en/status/report-2024-07-2024-09/portmgr.adoc
@@ -30,7 +30,7 @@ The most active committers to main were:
  148 mfechner@FreeBSD.org
  131 arrowd@FreeBSD.org
 
-A lot has happend in the ports tree in the last three quarter, an excerpt of the major software upgrades are:
+A lot has happened in the ports tree in the last three quarter, an excerpt of the major software upgrades are:
 
 - Default version of PostgreSQL switched to 16
 - chromium      updated from  126.0.6478.126 to 129.0.6668.100
