New committer (src): Jose Luis Duran (jlduran)
Complete steps 1-4 from the Committer's Guide, section 7.1 (For New
Committers):

  1. Add an Author Entity.
  2. Update the List of Developers and Contributors.
  3. Add a News Item.
  4. Add a PGP Key.

Reviewed by:	emaste
Approved by:	emaste (mentor)
Differential Revision:	https://reviews.freebsd.org/D47299

--- a/documentation/content/en/articles/pgpkeys/_index.adoc
+++ b/documentation/content/en/articles/pgpkeys/_index.adoc
@@ -399,6 +399,9 @@ include::{include-path}bruno.key[]
 === `{ale}`
 include::{include-path}ale.key[]
 
+=== `{jlduran}`
+include::{include-path}jlduran.key[]
+
 === `{nemysis}`
 include::{include-path}nemysis.key[]
 
