--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -1616,6 +1616,10 @@
 :jlaffaye-email: jlaffaye@FreeBSD.org
 :jlaffaye: {jlaffaye-name} <{jlaffaye-email}>
 
+:jlduran-name: Jose Luis Duran
+:jlduran-email: jlduran@FreeBSD.org
+:jlduran: {jlduran-name} <{jlduran-email}>
+
 :jlemon-name: Jonathan Lemon
 :jlemon-email: jlemon@FreeBSD.org
 :jlemon: {jlemon-name} <{jlemon-email}>
