frdp: correct grammar
Reviewed by:	andy

--- a/website/content/en/status/report-2024-07-2024-09/frdp.adoc
+++ b/website/content/en/status/report-2024-07-2024-09/frdp.adoc
@@ -7,7 +7,7 @@ link:https://www.freebsd.org/ru/[Web] URL: link:https://www.freebsd.org/ru/[]
 
 Contact: Andrei Zakhvatov <andrey.zakhvatov@gmail.com>
 
-The FreeBSD Russian Documentation Project current goal's is to provide up-to-date Russian translations of the most important parts of FreeBSD documentation (FAQ, Handbook, Web).
+The FreeBSD Russian Documentation Project's current goal is to provide up-to-date Russian translations of the most important parts of FreeBSD documentation (FAQ, Handbook, Web).
 It is important to support Russian speakers with high-quality official technical materials and increase acceptance of the operating system around the globe.
 We hope that this activity will receive some support from the Russian-speaking FreeBSD community and lead to more translated materials.
 
