committers-guide: Improve "Fixes:" metadata
Use the preferred format for displaying the "Fixes:" metadata in the git
commit message, as discussed in the srcmgr meeting (20241101).

Reviewed by:	emaste, imp, jhb
Approved by:	emaste (mentor)
Differential Revision:	https://reviews.freebsd.org/D47397

--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -2614,7 +2614,7 @@ Approved by: re (username)
 |The name of the project (if any) from which the code was obtained. Do not use this line for the name of an individual person.
 
 |`Fixes:`
-|The Git short hash and the title line of a commit that is fixed by this change as returned by `git log -n 1 --oneline GIT-COMMIT-HASH`.
+|The Git short hash and the title line of a commit that is fixed by this change as returned by `git log -n 1 --pretty=format:'%h ("%s")' GIT-COMMIT-HASH`.
 
 |`MFC after:`
 |To receive an e-mail reminder to MFC at a later date, specify the number of days, weeks, or months after which an MFC is planned.
