Status/2024Q3: Vale fixes
Fix some one-sentence-per-line issues found by vale linter.

--- a/website/content/en/status/report-2024-07-2024-09/core.adoc
+++ b/website/content/en/status/report-2024-07-2024-09/core.adoc
@@ -37,7 +37,8 @@ Core selected new liaisons for the various teams among themselves:
 
 ==== srcmgr
 
-* Core helped in forming a new srcmgr team. Their charter is not fully set in stone yet, it can be adjusted if needed in 6-12 months from now.
+* Core helped in forming a new srcmgr team.
+  Their charter is not fully set in stone yet, it can be adjusted if needed in 6-12 months from now.
 * Nominations for new src commit bits should from now on be sent to srcmgr@ instead of core@
 * A lurker program is suggested to keep an influx of new members.
 * Core announced srcmgr during DevSummit 202409 and sent a follow-up to developers@ on September 29.
