--- a/website/content/en/status/report-2024-07-2024-09/dhclient.adoc
+++ b/website/content/en/status/report-2024-07-2024-09/dhclient.adoc
@@ -7,9 +7,12 @@ link:https://github.com/freebsd/freebsd-src/pull/1368[dhclient Pull Request] URL
 
 Contact: Isaac Cilia Attard <icattard@FreeBSD.org>
 
-As part of my Google Summer of Code 2024 project, involving speeding up the FreeBSD boot process, I have worked on decreasing the time it takes for ARP resolution within dhclient to happen. This involved reducing the default ARP resolution timeout from 2000 ms to 250 ms, and adding an option to disable it altogether. The latter is useful within cloud environments, where a node is certain to have an IP address allotted to it.
+As part of my Google Summer of Code 2024 project, involving speeding up the FreeBSD boot process, I have worked on decreasing the time it takes for ARP resolution within dhclient to happen.
+This involved reducing the default ARP resolution timeout from 2000 ms to 250 ms, and adding an option to disable it altogether.
+The latter is useful within cloud environments, where a node is certain to have an IP address allotted to it.
 
-As a consequence of this, connecting to a DHCP network is now faster, including the boot process during which this happens. The speedup experienced is about 2 seconds.
+As a consequence of this, connecting to a DHCP network is now faster, including the boot process during which this happens.
+The speedup experienced is about 2 seconds.
 
 This causes FreeBSD systems to boot significantly faster than before.
 
