--- a/website/content/en/status/report-2024-07-2024-09/doceng.adoc
+++ b/website/content/en/status/report-2024-07-2024-09/doceng.adoc
@@ -16,7 +16,8 @@ Contact: FreeBSD Doceng Team <doceng@FreeBSD.org>
 
 The doceng@ team is a body to handle some of the meta-project issues associated with the FreeBSD Documentation Project; for more information, see link:https://www.freebsd.org/internal/doceng/[FreeBSD Doceng Team Charter].
 
-Benedict Reuschling steps down from doceng@. doceng@ would like to thank bcr@ for his service.
+Benedict Reuschling steps down from doceng@.
+doceng@ would like to thank bcr@ for his service.
 
 ==== Document changes
 
