--- a/website/content/en/status/report-2024-07-2024-09/mac_do.adoc
+++ b/website/content/en/status/report-2024-07-2024-09/mac_do.adoc
@@ -5,7 +5,8 @@ Contact: Baptiste Daroussin <bapt@FreeBSD.org>
 
 This project aims at allowing controlled process credentials transitions without using setuid executables but instead leveraging our MAC framework.
 
-Traditional programs for credentials change have to execute preliminary operations as root (if not as the effective UID, at a minimum as the saved UID).  Some of these programs (e.g., man:sudo[8]) have lots of lines of codes and comprise features (e.g., loadable security modules) that can be dangerous from a security standpoint.
+Traditional programs for credentials change have to execute preliminary operations as root (if not as the effective UID, at a minimum as the saved UID).
+Some of these programs (e.g., man:sudo[8]) have lots of lines of codes and comprise features (e.g., loadable security modules) that can be dangerous from a security standpoint.
 Thus, they have a non-negligible attack surface and are difficult to prove correct.
 Additionally, in most scenarios, the extra features they bring are not necessary.
 
