--- a/website/content/en/status/report-2024-07-2024-09/pinephone.adoc
+++ b/website/content/en/status/report-2024-07-2024-09/pinephone.adoc
@@ -14,7 +14,8 @@ Over the last few weeks, the groundwork has been implemented like getting used t
 Also, the LCD backlight can be turned on already and the USB-C hub is enabled even though it is not yet functional due to missing power management support.
 
 The next step is to write a driver for the RK818 power management chip.
-Without it, most of the hardware will not power on like the USB-C port above. This will be done by trying to modify the existing RK808 driver.
+Without it, most of the hardware will not power on like the USB-C port above.
+This will be done by trying to modify the existing RK808 driver.
 RK818 support should then make it possible to access a lot more of the devices, e.g. allowing to enable the screen, USB peripherals or WiFi.
 
 Additional feedback and testers are welcome.
