--- a/website/content/en/status/report-2024-07-2024-09/pot.adoc
+++ b/website/content/en/status/report-2024-07-2024-09/pot.adoc
@@ -13,7 +13,8 @@ Potluck aims to be to FreeBSD and Pot (and potentially one day also Podman) what
 During this quarter, there were two bugfixes to link:https://github.com/bsdpot/pot[Pot] that will be released soon.
 
 Potluck images saw some updates again.
-All images have been rebuilt again to include the latest fixes and quarterly packages. Additionally, some images like link:https://github.com/bsdpot/potluck/tree/master/loki[Loki] or link:https://github.com/bsdpot/potluck/tree/master/vault[Vault] have also received additional updates and bugfixes.
+All images have been rebuilt again to include the latest fixes and quarterly packages.
+Additionally, some images like link:https://github.com/bsdpot/potluck/tree/master/loki[Loki] or link:https://github.com/bsdpot/potluck/tree/master/vault[Vault] have also received additional updates and bugfixes.
 
 Also, we have done some research regarding potential future support of OCI, Buildah and Podman images in Potluck.
 Two blog posts, one describing link:https://honeyguide.eu/posts/build-own-containers-buildah-podman-freebsd/[a basic Buildah and Podman setup] and one describing link:https://honeyguide.eu/posts/micropod-blog-post/[how to orchestrate Podman containers with Nomad and Consul] have been published.
