--- a/website/content/en/status/report-2024-07-2024-09/portmgr.adoc
+++ b/website/content/en/status/report-2024-07-2024-09/portmgr.adoc
@@ -19,16 +19,17 @@ Compared to last quarter, this means a slight increase in the number of commits 
 The number of ports also increased (up from 32,471).
 
 The most active committers to main were:
-5133 sunpoet@FreeBSD.org
-1262 yuri@FreeBSD.org
- 375 jbeich@FreeBSD.org
- 357 vvd@FreeBSD.org
- 331 bofh@FreeBSD.org
- 192 uzsolt@FreeBSD.org
- 185 eduardo@FreeBSD.org
- 172 diizzy@FreeBSD.org
- 148 mfechner@FreeBSD.org
- 131 arrowd@FreeBSD.org
+
+- 5133 sunpoet@FreeBSD.org
+- 1262 yuri@FreeBSD.org
+-  375 jbeich@FreeBSD.org
+-  357 vvd@FreeBSD.org
+-  331 bofh@FreeBSD.org
+- 192 uzsolt@FreeBSD.org
+- 185 eduardo@FreeBSD.org
+- 172 diizzy@FreeBSD.org
+- 148 mfechner@FreeBSD.org
+- 131 arrowd@FreeBSD.org
 
 A lot has happened in the ports tree in the last three quarter, an excerpt of the major software upgrades are:
 
