Status/2024Q3: Publish report

--- a/website/content/en/status/_index.adoc
+++ b/website/content/en/status/_index.adoc
@@ -7,7 +7,7 @@ include::shared/en/urls.adoc[]
 
 = FreeBSD Status Reports
 
-== Next Quarterly Status Report submissions (October -- December) due: December 31th, 2024
+== Next Quarterly Status Report submissions (October -- December) due: December 31st, 2024
 
 If you are interested in submitting status reports or you are curious about how the publication process works, please see our link:{freebsd-status-report-process}[status report process description].
 
