ci.adoc: Fix a link

--- a/website/content/en/status/report-2024-07-2024-09/ci.adoc
+++ b/website/content/en/status/report-2024-07-2024-09/ci.adoc
@@ -2,7 +2,7 @@
 
 Links: +
 link:https://ci.FreeBSD.org[FreeBSD Jenkins Instance] URL: link:https://ci.FreeBSD.org[] +
-link:https://tinderbox.freebsd.org[FreeBSD CI Tinderbox view] URL: link:https://https://tinderbox.freebsd.org[] +
+link:https://tinderbox.freebsd.org[FreeBSD CI Tinderbox view] URL: link:https://tinderbox.freebsd.org[] +
 link:https://artifact.ci.FreeBSD.org[FreeBSD CI artifact archive] URL: link:https://artifact.ci.FreeBSD.org[] +
 link:https://wiki.FreeBSD.org/HostedCI[Hosted CI wiki] URL: link:https://wiki.FreeBSD.org/HostedCI[] +
 link:https://wiki.FreeBSD.org/3rdPartySoftwareCI[3rd Party Software CI] URL: link:https://wiki.FreeBSD.org/3rdPartySoftwareCI[] +
