--- a/shared/releases.adoc
+++ b/shared/releases.adoc
@@ -52,7 +52,7 @@
 
 // Set to 'INCLUDE' when the schedule is available.
 
-:beta2-upcoming: IGNORE
+:beta2-upcoming: INCLUDE
 
 // Set to 'INCLUDE' when the installation images are available.
 
@@ -82,18 +82,6 @@
 // fully complete yet.  I plan to followup on this and expand it
 // more (in addition to cleaning up this file) following the 11.3
 // release (likely as part of the 11.3 announcement commit). -gjb
-
-:rel142-current-major: 14
-:rel142-current: 14.2
-:rel142-current-date: December 3, 2024
-
-:u-rel142-notes: https://www.FreeBSD.org/releases/{rel142-current}R/relnotes/
-:u-rel142-announce: https://www.FreeBSD.org/releases/{rel142-current}R/announce/
-:u-rel142-errata: https://www.FreeBSD.org/releases/{rel142-current}R/errata/
-:u-rel142-hardware: https://www.FreeBSD.org/releases/{rel142-current}R/hardware/
-:u-rel142-installation: https://www.FreeBSD.org/releases/{rel142-current}R/installation/
-:u-rel142-readme: https://www.FreeBSD.org/releases/{rel142-current}R/readme/
-:u-rel142-signatures: https://www.FreeBSD.org/releases/{rel142-current}R/signatures/
 
 :rel141-current-major: 14
 :rel141-current: 14.1
