Handbook/Virtualization: Fix typo
Reviewed by:	Alexander Ziaee <concussious@runbox.com>, jrm
Differential Revision:	https://reviews.freebsd.org/D47494

--- a/documentation/content/en/books/handbook/virtualization/_index.adoc
+++ b/documentation/content/en/books/handbook/virtualization/_index.adoc
@@ -1283,7 +1283,7 @@ The list of link:https://www.qemu.org/docs/master/system/introduction.html#virtu
 * `Xen` on Linux as dom0 supporting Arm, x86
 * `Hypervisor Framework (hvf)` on MacOS supporting x86 and Arm (both 64 bit only)
 * `Windows Hypervisor Platform (whpx)` on Windows supporting x86
-* `NetBSD Virutal Machine Monitor (nvmm)` on NetBSD supporting x86
+* `NetBSD Virtual Machine Monitor (nvmm)` on NetBSD supporting x86
 * `Tiny Code Generator (tcg)` on Linux and other POSIX, Windows, MacOS supporting Arm, x86, Loongarch64, MIPS, PPC, s390x, and Sparc64.
 
 All the examples in this section used the `Tiny Code Generator (tcg)` accelerator as that is the only supported accelerator on FreeBSD at present.
