--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -425,11 +425,13 @@ Ethernet driver for Google Virtual NIC (gVNIC) (man:gve[4] driver)
 
 &hwlist.hme;
 
+&hwlist.ice;
+
 &hwlist.igc;
 
 &hwlist.ipheth;
 
-&hwlist.ixgbe;
+&hwlist.ix;
 
 &hwlist.ixl;
 
@@ -548,17 +550,17 @@ Ethernet driver for Google Virtual NIC (gVNIC) (man:gve[4] driver)
 
 &hwlist.bwn;
 
-[i386, amd64] Intel PRO/Wireless 2100 MiniPCI network adapter (man:ipw[4] driver)
+&hwlist.ipw;
 
-[i386, amd64] Intel PRO/Wireless 2200BG/2915ABG MiniPCI and 2225BG PCI network adapters (man:iwi[4] driver)
+&hwlist.iwi;
 
 &hwlist.iwlwifi;
 
-[i386, amd64] Intel Dual Band Wireless AC 3160/7260/7265 IEEE 802.11ac network adapters (man:iwm[4] driver)
+&hwlist.iwm;
 
 &hwlist.iwn;
 
-[i386, amd64] Marvell Libertas IEEE 802.11b/g PCI network adapters (man:malo[4] driver)
+&hwlist.malo;
 
 Marvell 88W8363 IEEE 802.11n wireless network adapters (man:mwl[4] driver)
 
@@ -572,7 +574,9 @@ Marvell 88W8363 IEEE 802.11n wireless network adapters (man:mwl[4] driver)
 
 &hwlist.rtw89;
 
-Realtek RTL8192C, RTL8188E, RTL8812A and RTL8821A based PCIe IEEE 802.11b/g/n wireless network adapters (man:rtwn[4] driver)
+&hwlist.rtwn_pci;
+
+&hwlist.rtwn_usb;
 
 &hwlist.rum;
 
@@ -586,7 +590,7 @@ Realtek RTL8192C, RTL8188E, RTL8812A and RTL8821A based PCIe IEEE 802.11b/g/n wi
 
 &hwlist.urtw;
 
-[i386, amd64] Intel PRO/Wireless 3945ABG MiniPCI network adapters (man:wpi[4] driver)
+&hwlist.wpi;
 
 &hwlist.zyd;
 
