website/shared/releases: Add missing version macro for FreeBSD 14.2
The website currently fails to render the macro and presents a confusing
"FreeBSD {rel142-current}-STABLE" and incorrect links.

PR:		282652
Reported by:	Graham Perrin <grahamperrin@gmail.com>
Reviewed by:	cperciva, jrm
Differential Revision:	https://reviews.freebsd.org/D47499

--- a/shared/releases.adoc
+++ b/shared/releases.adoc
@@ -83,6 +83,9 @@
 // more (in addition to cleaning up this file) following the 11.3
 // release (likely as part of the 11.3 announcement commit). -gjb
 
+:rel142-current-major: 14
+:rel142-current: 14.2
+
 :rel141-current-major: 14
 :rel141-current: 14.1
 :rel141-current-date: June 4, 2024
