cups: reference service(8) rather than rc.d scripts directly
service(8) is a more convenient user interface to rc.d scripts.

Reviewed by:	bofh
Sponsored by:	The FreeBSD Foundation
Differential Revision: https://reviews.freebsd.org/D47886

--- a/documentation/content/en/articles/cups/_index.adoc
+++ b/documentation/content/en/articles/cups/_index.adoc
@@ -116,8 +116,8 @@ Once these changes have been made, the man:devfs[8] and CUPS systems must both b
 
 [source,shell]
 ....
-# /etc/rc.d/devfs restart
-# /usr/local/etc/rc.d/cupsd restart
+# service devfs restart
+# service cupsd restart
 ....
 
 [[printing-cups-configuring-printers]]
