--- a/documentation/content/en/articles/cups/_index.po
+++ b/documentation/content/en/articles/cups/_index.po
@@ -188,8 +188,8 @@ msgstr ""
 #: documentation/content/en/articles/cups/_index.adoc:121
 #, no-wrap
 msgid ""
-"# /etc/rc.d/devfs restart\n"
-"# /usr/local/etc/rc.d/cupsd restart\n"
+"# service devfs restart\n"
+"# service cupsd restart\n"
 msgstr ""
 
 #. type: Title ==
