--- a/website/content/en/releases/13.4R/errata.adoc
+++ b/website/content/en/releases/13.4R/errata.adoc
@@ -46,6 +46,9 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 |Advisory |Date |Topic
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-24:15.bhyve.asc[FreeBSD-SA-24:15.bhyve] |19 September 2024 |bhyve(8) out-of-bounds read access via XHCI emulation
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-24:16.libnv.asc[FreeBSD-SA-24:16.libnv] |19 September 2024 |Integer overflow in libnv
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-24:17.bhyve.asc[FreeBSD-SA-24:17.bhyve] |29 October 2024 |Multiple issues in the bhyve hypervisor
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-24:18.ctl.asc[FreeBSD-SA-24:18.ctl] |29 October 2024 |Unbounded allocation in ctl(4) CAM Target Layer
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-24:19.fetch.asc[FreeBSD-SA-24:19.fetch] |29 October 2024 |Certificate revocation list fetch(1) option fails
 |===
 
 [[errata]]
